fixing headerwrap

--- a/Theme/assets/css/main.css
+++ b/Theme/assets/css/main.css
@@ -532,3 +532,11 @@ hr {
     opacity: 1;
 }
 }
+
+@media (max-width: 640px){
+    #headerwrap h1 {font-size: 80px; transition: 1s}
+}
+
+@media (max-width: 380px){
+    #headerwrap h1 {font-size: 50px; transition: 1s}
+}
